--- a/email-writer-sb (1)/email-writer-sb/src/main/resources/application.properties
+++ b/email-writer-sb (1)/email-writer-sb/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=email-writer-sb
 gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
 
 gemini.api.key=${GEMINI_KEY}
+
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+server.port=${PORT:8080}
